--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
     
 </div>
 
-<div style="height: 90vh;" class="services container-fluid d-flex flex-column align-items-center justify-content-center my-3">
+<div style="height: 75vh;" class="services container-fluid d-flex flex-column align-items-center justify-content-center my-3">
 
     <h3 class="text-center fs-4">SERVICES</h3>
     <h5 class="fs-2 fw-bold text-center">Taking Your Business to<br> the Next Level</h5>
@@ -47,4 +47,254 @@
     </div>
 
 </div>
+
+<div class="Projects container-fluid p-1">
+    <h5 class="fs-2 fw-bold text-center">Our Projects</h5>
+    <p class="text-center my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus<br> beatae quibusdam quasi itaque voluptatum! Sequi!</p>
+    <div class="project-card container d-flex align-items-center justify-content-between rounded my-5">
+        <div class="cont w-50 d-flex align-items-start justify-content-around flex-column p-5">
+            <h3 class="text-white mb-5">Property Management <br> WebApp</h3>
+            
+            <p style="font-size: 15px" class=" text-white  fw-lighter mb-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam quaerat eligendi dignissimos perferendis, sint quo exercitationem numquam deserunt. Necessitatibus quibusdam quis voluptatem facere recusandae aut asperiores maxime, rem quidem tenetur?</p>
+
+            <button class="text-center text-dark getstr-btn px-3 py-2  rounded-pill">Read More<i class="fa-solid fa-caret-right"></i></button>
+        </div>
+        <div class="w-50">
+            <img width="100%"  src="../assets/Project-card/Screenshot (29).png" alt="">
+        </div>
+    </div>
+</div>
+
+</div>
+
+<div class="tools container-fluid py-2 px-5  d-flex align-items-center justify-content-center flex-column">
+    <h5 class="fs-2 fw-bold text-center my-5">Tools & Tech Stack</h5>
+    
+    <div class="carousel-container">
+        <div class="carousel-track" #carouselTrack>
+          <div class="carousel-slide" *ngFor="let image of images">
+            <img [src]="image" alt="Carousel Image">
+          </div>
+        </div>
+      </div>
+      
+
+
+</div>
+
+
+  
+
+<div class="home container-fluid w-100 ">
+
+    <div class="WorkProcess my-5 ">
+        <div>
+            <h3 class=" fs-4 ">Our <span class="fw-bold" style="color: blue;">Execution Process</span></h3>
+            <hr class="w-25">
+        </div>
+        
+        
+        <div class="steps d-flex align-items-center justify-content-around w-100">
+            <div class="first w-50 p-2">
+                <div class="step-right w-100 d-flex align-items-center justify-content-between px-2">
+                    <div>
+                        <h2 class="fs-6">Discovery Workshop</h2>
+                        <p class="" style="font-size: 13px;">
+                            Here, we understand your business, goals, pain points and priorities. These multiple brainstorming sessions help us to map out the existing workflows and your future goals.
+                        </p>
+                    </div>
+                   
+                    <img style="width: 70px;" src="../assets/Process/icon_workshop.svg" alt="">
+                </div>
+                <div class="tempstep"></div>
+                <div class="step-right w-100 d-flex align-items-center justify-content-between px-2">
+                    <div>
+                        <h2 class="fs-6">Development</h2>
+                        <p class="" style="font-size: 13px;">
+                            Here, we understand your business, goals, pain points and priorities. These multiple brainstorming sessions help us to map out the existing workflows and your future goals.
+                        </p>
+                    </div>
+                   
+                    <img style="width: 70px;" src="../../assets/Process/icon_development.svg" alt="">
+                </div>
+                <div class="tempstep"></div>
+                <div class="step-right w-100 d-flex align-items-center justify-content-between px-2">
+                    <div>
+                        <h2 class="fs-6">Launch and Maintenance</h2>
+                        <p class="" style="font-size: 13px;">
+                            Here, we understand your business, goals, pain points and priorities. These multiple brainstorming sessions help us to map out the existing workflows and your future goals.
+                        </p>
+                    </div>
+                   
+                    <img style="width: 70px;" src="../assets/Process/icon_launch-mainteinance.svg" alt="">
+                </div>
+                <div class="tempstep"></div>
+
+                
+            </div>
+
+            <div class="second w-50 p-2">
+                <div class="tempstep"></div>
+                
+                <div class="step-left w-100 d-flex align-items-center justify-content-between px-2">
+                    <img style=" width: 70px;" src="../assets/Process/icon_design.svg" alt="">
+                    <div >
+                        <h2 class="fs-6 text-end">Strategy and Solution Design</h2>
+                        <p class="text-end"  style="font-size: 13px;">
+                            Here, we understand your business, goals, pain points and priorities. These multiple brainstorming sessions help us to map out the existing workflows and your future goals.
+                        </p>
+                    </div>
+                </div>
+                <div class="tempstep"></div>
+                <div class="step-left w-100 d-flex align-items-center justify-content-between px-2">
+                    <img style="width: 70px;" src="../assets/Process/icon_testing-qa.svg" alt="">
+                    <div>
+                        <h2 class="fs-6 text-end">Testing and QA</h2>
+                        <p class="text-end" style="font-size: 13px;">
+                            Here, we understand your business, goals, pain points and priorities. These multiple brainstorming sessions help us to map out the existing workflows and your future goals.
+                        </p>
+                    </div>
+                </div>
+                <div class="tempstep"></div>
+                <div class="step-left w-100 d-flex align-items-center justify-content-between px-2">
+                    <img style="width: 70px;" src="../assets/Process/icon_support.svg" alt="">
+                    <div>
+                        <h2 class="fs-6 text-end">Support and Customer Service</h2>
+                        <p class="text-end" style="font-size: 13px;">
+                            Here, we understand your business, goals, pain points and priorities. These multiple brainstorming sessions help us to map out the existing workflows and your future goals.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- <p class="text-center mt-5 " style="color: blue;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est totam doloremque quod quas laborum nisi fugiat repellat voluptatibus odio nobis?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, optio!</p> -->
+    </div>
+
+    <div class="clients container-fluid">
+        <h3 class="text-center fs-4" style="color: blue;">Testimonials</h3>
+        <h5 class="fs-2 fw-bold text-center" style="margin-bottom: 100px;">We Care About Our Customers<br>Experince Too</h5>
+        <div  class="reviews row  d-flex align-items-center justify-content-between">
+            <div class="review-card col" style="border: 1px solid #6101D3;">
+               <img width="100px" src="../assets/clients/person1.jpg" alt="">
+               <h3>Zara Feroz</h3>
+               <p style="font-size: 12px;" class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, beatae?Lorem ipsum dolor sit amet.</p>
+               
+               <div class="anim">
+                <div style="background-color: #6101D3;"></div>
+                <div style="background-color: #6101D3;"></div>
+                <div style="background-color: #6101D3;"></div>
+                <div style="background-color: #6101D3;"></div>
+               </div>
+               
+            </div>
+            <div class="review-card col" style="border: 1px solid #CA2C5B;">
+                <img width="100px" src="../assets/clients/person2.jpg" alt="">
+                <h3> Michael Pitt</h3>
+                <p style="font-size: 12px;" class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, beatae?Lorem ipsum dolor sit amet.</p>
+                <div class="anim">
+                <div style="background-color: #CA2C5B;"></div>
+                <div style="background-color: #CA2C5B;"></div>
+                <div style="background-color: #CA2C5B;"></div>
+                <div style="background-color: #CA2C5B;"></div>
+                
+               </div>
+            </div>
+            <div class="review-card col" style="border: 1px solid blue;">
+                <img width="100px" src="../assets/clients/person3.jpg" alt="">
+                <h3>Logan paul</h3>
+                <p style="font-size: 12px;" class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, beatae?Lorem ipsum dolor sit amet.</p>
+                <div class="anim">
+                <div style="background-color: blue;"></div>
+                <div style="background-color: blue;"></div>
+                <div style="background-color: blue;"></div>
+                <div style="background-color: blue;"></div>
+                
+               </div>
+            </div>
+            <div class="review-card col" style="border: 1px solid yellowgreen;">
+                <img width="100px" src="../assets/clients/person4.jpg" alt="">
+                <h3>Adithya Raja</h3>
+                <p style="font-size: 12px;" class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, beatae?Lorem ipsum dolor sit amet.</p>
+                <div class="anim">
+                <div style="background-color: yellowgreen;"></div>
+                <div style="background-color: yellowgreen;"></div>
+                <div style="background-color: yellowgreen;"></div>
+                <div style="background-color: yellowgreen;"></div>
+                
+               </div>
+            </div>
+            
+           
+        </div>
+    </div>
+
+</div>
+
+<div class=" container-fluid w-100 " style="background-color: blue;height: 3px;" >
+
+</div>
+<div class="footer-div bg-black container-fluid d-flex align-items-center justify-content-center flex-column h-100">
+    
+    <div class="home row container-fluid w-100 ">
+        <div class="col-4 d-flex align-items-start justify-content-start flex-column p-2">
+            <h5 class="fs-3 fw-bold text-light mb-5">Logo.</h5>
+            <p class="text-secondary" style="font-size: 12px;width: 70%;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quibusdam nobis nemo tempora id repellat iste eveniet nisi quia asperiores!</p>
+            <div class="social">
+                <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-square-pinterest"></i></a>
+                <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
+            </div>
+        </div>
+        <div class="col-2 ">
+            <h4 class="text-light fs-6 " style="">Services</h4>
+            <div class="service-list d-flex align-items-start justify-content-start flex-column">
+                <a href="#">Customized App</a>
+                <a href="#">Web Development</a>
+                <a href="#">App Development</a>
+                <a href="#">Product Support</a>
+                <a href="#">Customized App</a>
+                <a href="#">Web Development</a>
+                <a href="#">Quality Testing</a>
+                <a href="#">Digital SEO</a>
+
+            </div>
+        </div>
+        <div class="col-2 ">
+            <h4 class="text-light fs-6 " style="">Company</h4>
+            <div class="service-list d-flex align-items-start justify-content-start flex-column">
+                <a href="#">Customized App</a>
+                <a href="#">Web Development</a>
+                <a href="#">App Development</a>
+                <a href="#">Product Support</a>
+                
+
+            </div>
+        </div>
+        <div class="col-2">
+            <h4 class="text-light fs-6 " style="">Products</h4>
+            <div class="service-list d-flex align-items-start justify-content-start flex-column">
+                <a href="#">Customized App</a>
+                <a href="#">Web Development</a>
+                <a href="#">App Development</a>
+                <a href="#">Web Development</a>
+                <a href="#">Quality Testing</a>
+                <a href="#">Digital SEO</a>
+
+            </div>
+        </div>
+        <div class="col-2">
+            <h4 class="text-light fs-6 " style="">Resources</h4>
+            <div class="service-list d-flex align-items-start justify-content-start flex-column">
+                <a href="#">Customized App</a>
+                <a href="#">Web Development</a>
+                <a href="#">App Development</a>
+               
+
+            </div>
+        </div>
+    </div>
+    <p class="text-light text-center" style="font-size: 13px;">Copyright ©2024 Project®. All rights reserved.</p>
+
 </div>
