--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -27,10 +27,214 @@
     width: 270px;
     height: 340px;
     background: #000;
-    border-radius: 30px;
+    border-radius: 10px;
 }
 
 .services h3{
     color: blue;
 }
 
+.Projects{
+    height: 90vh;
+
+}
+
+.Projects h3{
+    color: rgb(0, 0, 0);
+}
+
+.project-card{
+    width: 90%;
+    height: 60vh;
+    background-color: black;
+}
+
+.project-card button{
+    background:#ffffff;
+    color: rgb(0, 0, 0);
+    outline: none;
+    border: none;
+}
+
+.tools{
+
+    height: 30vh;
+   
+}
+
+.WorkProcess{
+    width: 100%;
+    height: 80vh;
+    
+}
+.steps .tempstep{
+    width: 100%;
+    height: 100px;
+}
+
+.steps .step-right{
+    width: 100%;
+    height: 100px;
+    border-radius: 10px 50px 50px 10px;
+    border: 1px solid #acb9ff;
+    cursor: pointer;
+}
+.steps .step-left{
+    width: 100%;
+    height: 100px;
+    border-radius: 50px 10px 10px 50px;
+    border: 1px solid #acb9ff;
+    cursor: pointer;
+}
+
+.step-right img, .step-left img{
+    border-radius: 50%;
+    /* filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(86deg) brightness(118%) contrast(119%); */
+   
+}
+
+.carousel-container {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .carousel-track {
+    display: flex;
+    width: max-content;
+    animation: scroll 100s linear infinite;
+  }
+  
+  .carousel-slide {
+    flex: 0 0 auto;
+    width: 100px;
+    margin-right: 30px;
+  }
+  
+  .carousel-slide img {
+    width: 100%;
+    height: auto;
+  }
+  
+  @keyframes scroll {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+  
+  .footer-div{
+    height: 320px;
+
+  }
+  .footer-div .home{
+    height: 320px;
+  }
+
+ 
+
+  .social a{
+    font-size: 35px;
+    margin-right: 15px;
+    color: white;
+
+  }
+  .social a:nth-child(1) {
+    color: #1775f1;
+  }
+  .social a:nth-child(2) {
+    color: rgb(195, 0, 255);
+  }
+  .social a:nth-child(3) {
+    color:  #1873b9;
+  }
+  .social a:nth-child(4 ) {
+    color: #E70820;
+    border-radius: 50%;
+  }
+  .social a:nth-child(5) {
+    color: white;
+  }
+  .social a i{
+    transition: 0.5s;
+  }
+  .social a i:hover{
+    transform: rotate(360deg);
+  }
+
+  .service-list a {
+    font-size: 14px;
+    text-decoration: none;
+    font-weight: 300;
+    margin-bottom: 10px;
+    color: rgba(255, 255, 255, 0.589);
+  }
+
+  .service-list a:hover{
+    color: white;
+  }
+
+
+  .clients{
+    margin: 20px 0px;
+    height: 80vh;
+    background: #ffecec;
+  }
+  .reviews{
+    margin-top: 20px;
+  }
+
+  .reviews .review-card{
+    margin: auto 30px;
+    height: 400px;
+    background: white;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(0, 0, 0, 0.15) 0px 0px 0px 1px;
+    border-radius: 20px;
+    outline: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 20px 10px;
+    border: 1px solid white;
+    transition: .5s ease;
+  }
+  .reviews .review-card:nth-child(1):hover{
+
+   transform:  scale(1);
+    box-shadow: #6101D3 0px 2px 4px 0px, #6101D3 0px 2px 16px 0px;
+  }
+  .reviews .review-card:nth-child(2):hover{
+    box-shadow: #CA2C5B 0px 2px 4px 0px, #CA2C5B 0px 2px 16px 0px;
+  }
+  .reviews .review-card:nth-child(3):hover{
+    box-shadow: blue 0px 2px 4px 0px, blue 0px 2px 16px 0px;
+  }
+  .reviews .review-card:nth-child(4):hover{
+    box-shadow: yellowgreen 0px 2px 4px 0px, yellowgreen 0px 2px 16px 0px;
+  }
+  .reviews .review-card img{
+    border-radius: 50%;
+  }
+  .reviews .review-card h3{
+    font-weight: 700;
+    font-size: 16px;
+    text-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    /* text-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px; */
+
+  }
+
+  .anim{
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .anim div{
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  }
