--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,10 @@
     <div class="d-flex align-items-center justify-content-center">
       <a class="navbar-brand fw-bold">Logo.</a>
       <div class="menus  d-flex align-items-center justify-content-between ms-4" style="width: 500px;">
-        <a href="#">Home</a>
+        <a href="Home">Home</a>
         <a href="#">Services</a>
         <a href="#">Success Stories</a>
-        <a href="#">About US</a>
+        <a href="About">About US</a>
         <a href="#">Contacts</a>
       </div>
     </div>
